fixed the home page overflow issue

--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -6,6 +6,7 @@
 
 .homeWrapper{
     height: 100%;
+    width: 100%;
 }
 
 .homeImage{
